--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -22,7 +22,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Log in to GHCR
+      - name: Log in to GHCR using repository PAT (GHCR_TOKEN)
+        if: ${{ secrets.GHCR_TOKEN }}
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Log in to GHCR using GITHUB_TOKEN (fallback)
+        if: ${{ !secrets.GHCR_TOKEN }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
