--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dependencies": {
         "express": "^4.18.2",
         "axios": "^1.6.0",
-        "cors": "^2.8.5"
+        "cors": "^2.8.5",
+        "ajv": "^8.17.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
