--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -12,6 +12,8 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    env:
+      HAS_GHCR_TOKEN: ${{ secrets.GHCR_TOKEN != '' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,7 +25,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log in to GHCR using repository PAT (GHCR_TOKEN)
-        if: ${{ secrets.GHCR_TOKEN }}
+        if: ${{ env.HAS_GHCR_TOKEN == 'true' }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -31,7 +33,7 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Log in to GHCR using GITHUB_TOKEN (fallback)
-        if: ${{ !secrets.GHCR_TOKEN }}
+        if: ${{ env.HAS_GHCR_TOKEN != 'true' }}
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
